Add dev dependencies and dev scripts.

--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
   "author": "Carlos Filoteo <c.filoteo@live.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "node_modules/postcss-cli/bin/postcss -c postcss.json -w",
-    "postcss": "postcss",
-    "build": "node_modules/postcss-cli/bin/postcss -c postcss.json"
+    "build:dev": "node_modules/postcss-cli/bin/postcss -c postcss.json -w",
+    "build": "node_modules/postcss-cli/bin/postcss -c postcss.json",
+    "reload": "lr-http-server -p 3000 -d './dist/'",
+    "start": "npm-run-all -p build:dev reload"
   },
   "devDependencies": {
     "cssnano": "^3.10.0",
+    "lr-http-server": "^0.1.5",
     "normalize.css": "^5.0.0",
+    "npm-run-all": "^4.0.1",
     "postcss-cli": "^2.6.0",
     "postcss-cssnext": "^2.9.0",
     "postcss-import": "^9.1.0"
